feat: implementasi modul admin dashboard dengan method GET, admin subscription dengan method GET, dan memperbaiki method GET dan PATCH pada modul adminTenant. sekalian dokumentasi Swagger untuk ketiga modul tersebut agar bisa dites di Web Swagger
